# lit-motion

./: .gitignore  BUILD.bazel  CHANGELOG.md  README.md  animate.ts  ifTruthy.ts  index.ts  package.json  pnpm-lock.yaml  prettier.config.js  segment.ts  timeline.ts  tsconfig.json  when.ts
.github/: release-please-config.json  release-please.yml  renovate.json
.github/workflows/: ci.yml  publish.yml  release.yml
